# rpgpr

./: Cargo.toml  README.md
assets/: dynamic.assets.ron
assets/sources/: background_forest.aseprite  character_old_man.aseprite  icon_heart.aseprite  item_money.aseprite  loot_money.aseprite  old_man.aseprite  tree.aseprite
ron/: areas.ron  characters.ron  saved_area.ron  settings.ron  weapons.ron
src/: area.rs  background.rs  character.rs  encounter.rs  lib.rs  loading.rs  main.rs  menu.rs  player.rs
src/area/: mod.rs
src/background/: mod.rs
src/chance/: mod.rs
src/character/: mod.rs
src/encounter/: mod.rs
src/player/: mod.rs
src/save/: mod.rs
src/settings/: mod.rs
src/ui/: mod.rs
src/weapon/: mod.rs
